// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleCategory  Library closed, category collapsed  matches snapshot 1`] = `
<div
  className="card closed-ML--category"
>
  <div
    className="module-category--wrapper"
  >
    <div
      className="ML-cat"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="closed-ML--category"
      >
        <span
          className="icon-database ml-icon"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ModuleCategory  Library closed, category open matches snapshot 1`] = `
<div
  className="card closed-ML--category"
>
  <div
    className="module-category--wrapper"
  >
    <div
      className="ML-cat"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="closed-ML--category"
      >
        <span
          className="icon-undefined ml-icon"
        />
      </div>
    </div>
    <div
      className="ml-list-mini"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <Connect(DragSource(Module))
        icon="add"
        id={88}
        isReadOnly={false}
        key="First Module"
        libraryOpen={false}
        name="First Module"
        setOpenCategory={[MockFunction]}
      />
      <Connect(DragSource(Module))
        icon="url"
        id={101}
        isReadOnly={false}
        key="Second Module"
        libraryOpen={false}
        name="Second Module"
        setOpenCategory={[MockFunction]}
      />
    </div>
  </div>
</div>
`;

exports[`ModuleCategory  Library open matches snapshot 1`] = `
<div
  className="card closed-ML--category"
>
  <div
    className="module-category--wrapper"
  >
    <div
      className="ML-cat"
    >
      <div
        className="category-container"
      >
        <span
          className="category-name"
        >
          Add Data
        </span>
      </div>
    </div>
    <div
      className="ml-list"
    >
      <Connect(DragSource(Module))
        icon="add"
        id={88}
        isReadOnly={false}
        key="First Module"
        libraryOpen={true}
        name="First Module"
        setOpenCategory={[MockFunction]}
      />
      <Connect(DragSource(Module))
        icon="url"
        id={101}
        isReadOnly={false}
        key="Second Module"
        libraryOpen={true}
        name="Second Module"
        setOpenCategory={[MockFunction]}
      />
    </div>
  </div>
</div>
`;
